--- a/src/component/hotel/hotel-item.css
+++ b/src/component/hotel/hotel-item.css
@@ -10,3 +10,11 @@
 .p1-item-location {
     font-size: 1.2rem;
 }
+
+.p1-item-feature {
+    margin-left: 0.2rem;
+}
+
+.p1-icon-feature {
+    vertical-align: middle;
+}
