--- a/src/index.css
+++ b/src/index.css
@@ -21,3 +21,22 @@ nav {
   min-height: calc(100vh - 56px - 70px);
   padding: 1.5rem 0
 }
+
+/*for debug*/
+.p1-red {
+  border: 5px solid red;
+  box-sizing: border-box;
+  box-shadow: inset 0 0 10px red;
+}
+
+.p1-blue {
+  border: 5px solid blue;
+  box-sizing: border-box;
+  box-shadow: inset 0 0 10px blue;
+}
+
+.p1-green {
+  border: 5px solid green;
+  box-sizing: border-box;
+  box-shadow: inset 0 0 10px green;
+}
